# apps/server/src/modules/approval/dto/update-approval.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger'
+import { CreateApprovalDto } from './create-approval.dto'
+
+export class UpdateApprovalDto extends PartialType(CreateApprovalDto) {}
